--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,5 +13,7 @@
 
 /* @import "../metronic/vendors/keenicons/duotone/style.css";
 @import "../metronic/vendors/keenicons/filled/style.css";
+@import "../metronic/vendors/keenicons/solid/style.css";
 @import "../metronic/vendors/keenicons/outline/style.css";
-@import "../metronic/vendors/keenicons/solid/style.css"; */
+
+@import "../metronic/css/styles.css"; */
